@@ -1,3 +1,7 @@
+08/02/2017:
+	- Extra try/catch in KakaduImage for images with missing codestreams
+
+
 29/11/2016:
 	- Another update to IIIF aspect ratio code
 
